Fixes error message not disapearing on firefox OS device.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,18 +12,18 @@
     -moz-box-shadow:    0 0 5px black;
     box-shadow:         0 0 5px black;
 
-    -webkit-transform: translateY(-50px);
+    -webkit-transform: translateY(-150px);
     -webkit-animation: slideDown 2.5s 0s 1 ease forwards;
-    -moz-transform:    translateY(-50px);
+    -moz-transform:    translateY(-150px);
     -moz-animation:    slideDown 2.5s 0s 1 ease forwards;
 }
 
 @-webkit-keyframes slideDown {
-    0%, 100% { -webkit-transform: translateY(-50px); }
+    0%, 100% { -webkit-transform: translateY(-150px); }
     10%, 90% { -webkit-transform: translateY(0px); }
 }
 @-moz-keyframes slideDown {
-    0%, 100% { -moz-transform: translateY(-50px); }
+    0%, 100% { -moz-transform: translateY(-150px); }
     10%, 90% { -moz-transform: translateY(0px); }
 }
 
